fixed problems with footer on smaller devices

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -39,3 +39,13 @@ footer {
 		color: $blue-dark;
 	}
 }
+
+@media screen and (max-width: 480px) {
+	footer {
+		ul.social-icons {
+			li {
+				margin-left: $margin-xs;
+			}
+		}
+	}
+}
